--- a/views/pages/metamask.ejs
+++ b/views/pages/metamask.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="zxx">
-<!-- =======Author========== Shraddha ========================= -->
+<!-- =======Author========== Susintharan ========================= -->
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
